2006-06-12 [paul]	1.79.1

	1.79.1 released

2006-06-12 [paul]	1.79.0cvs5

	* po/Makefile.in.in
		fix autoconf warning

2006-06-12 [paul]	1.79.0cvs4

	* po/fr.po
		updated by Fabien Vantard

2006-06-08 [colin]	1.79.0cvs3

	* src/vcal_folder.c
	* src/vcal_manager.c
		Fix leaks

2006-06-06 [wwp]	1.79.0cvs2

	* configure.ac
	* src/.cvsignore
	* src/Makefile.am
	* src/plugin_version.h.in
	* src/plugin.c
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	1.79.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-05-21 [colin] 1.79

	* src/vcal_folder.c
		Compile fix for gcc-2.9x
		Patch by Pawel Pekala

2006-04-28 [colin] 1.78

	* src/vcalendar.c
		Charset fix
	*po/pl.po
		Fix update-po

2006-04-27 [colin] 1.77

	* configure.ac
	* po/pl.po
		Polish translation
		Patch by Pawel Pekala

2006-04-20 [colin] 1.76

	* src/vcalendar.c
		Fix bug #941 (glibc detected *** sylpheed-claws: free():
		invalid pointer:)

2006-04-19 [colin] 1.75

	* src/vcal_meeting_gtk.c
		Fix return code check

2006-04-07 [colin] 1.74

	* src/vcal_folder.c
		Factorize get/set_xml

2006-04-07 [colin] 1.73

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-04-04 [colin] 1.72

	* src/vcal_meeting_gtk.c
		Automatically put end of meeting after start of
		meeting. Fix hours like 24:60 being selectable.

2006-04-06 [paul]

	* po/fi.po
	* po/fr.po
	* po/pt_BR.po
	* po/sk.po
		updated by Tommi Pirinen, Fabien Vantard, Frederico
		Goncalves Guimaraes, and Andrej Kacian

2006-03-24 [colin] 1.71
	* src/vcal_folder.c
		Warning fix (by Fabien Vantard)

2006-03-22 [colin] 1.70
	* src/vcal_manager.c
		Fix a possible crash
	* src/vcal_folder.c
		Implement folder renaming

2006-03-16 [colin] 1.60
	* src/vcal_folder.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Fix g_warnings, fix missing last webcal item
		Choose the "later" duration better

2006-03-15 [wwp] 1.57